<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ShopHop_white"
    android:orientation="vertical"
    android:id="@+id/rlContent"
    tools:ignore="MissingPrefix"
    >

    <include
        android:id="@+id/toolbar_lay"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:layout_below="@id/toolbar_lay"
        android:paddingBottom="@dimen/sh_spacing_standard_new">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_30sdp">

<!--            <ImageView-->
<!--                android:id="@+id/ivProfileImage"-->
<!--                android:layout_width="@dimen/_120sdp"-->
<!--                android:layout_height="@dimen/_120sdp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_margin="@dimen/sh_spacing_standard_new"-->
<!--                android:scaleType="centerCrop"-->
<!--                android:src="@drawable/shophop_ic_walk"-->
<!--                app:civ_border_color="@color/ShopHop_view_color"-->
<!--                app:civ_border_width="@dimen/_4sdp" />-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/sh_spacing_standard_new"
                android:scaleType="centerCrop"
                android:src="@drawable/shophop_ic_walk"
                app:civ_border_width="@dimen/_4sdp"
                app:civ_border_color="@color/ShopHop_view_color"/>

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sh_text_seller_johnshops"
                android:textAppearance="@style/FontSemiBold"
                android:textColor="@color/ShopHop_textColorPrimary"
                android:textSize="@dimen/sh_font_size_large" />
            <TextView
                android:id="@+id/txt_Bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Hello World"
                android:textAppearance="@style/FontSemiBold"
                android:textColor="@color/ShopHop_textColorPrimary"
                android:textSize="@dimen/sh_font_size_large" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_Info"
                android:onClick="ShowPopup"
                style="@style/ShopHopMaterialButtonStyle.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sh_spacing_standard_new"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/sh_spacing_standard_new"
                android:layout_marginBottom="@dimen/sh_spacing_large"
                android:text="update Info" />

            <TextView
                android:id="@+id/toysList"
                style="@style/ShopHopAccountLabel"
                android:text="@string/sh_lbl_my_orders" />

            <TextView
                android:id="@+id/eventList"
                style="@style/ShopHopAccountLabel"
                android:text="@string/sh_lbl_my_offers" />
            <TextView
                android:id="@+id/tvStoreList"
                style="@style/ShopHopAccountLabel"
                android:text="@string/store_list" />

            <TextView
                android:id="@+id/tvWishlist"
                style="@style/ShopHopAccountLabel"
                android:text="@string/sh_lbl_wish_list" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout"
                style="@style/ShopHopMaterialButtonStyle.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sh_spacing_standard_new"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/sh_spacing_standard_new"
                android:layout_marginBottom="@dimen/sh_spacing_large"
                android:text="@string/sh_btn_sign_out" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/shophop_layout_ads" />

    </LinearLayout>

</RelativeLayout>